fix: social nav not showing on widescreen devices

--- a/src/styles/partials/nav.sass
+++ b/src/styles/partials/nav.sass
@@ -91,6 +91,7 @@
     display: none
 
     .social-nav
+        display: inherit !important
         list-style: none
         padding: 0
         margin: 1em 0
